[package]
name = "multirec"
version = "0.1.0"
description = "A command-line tool for automated multi-sampling of MIDI instruments"
categories = ["command-line-utilities", "multimedia::audio"]

license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
cpal = "0.15.2"
env_logger = "0.10.0"
hound = "3.5.0"
log = "0.4.20"
midir = "0.9.1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
rtrb = "0.2.3"
serde = { version = "1.0.189" }
thiserror = "1.0.48"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

autosam = { path = "../autosam", version = "0.1.0", features = ["std"] }
dot-multisample = { path = "../dot-multisample" }
